--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           git add -f assets.zip
           git add -f hash.txt
-          git config --global user.name 'ReXiSp'
-          git config --global user.email 'ReXiSp@users.noreply.github.com'
-          git commit -am "Generate Hash"
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git commit -am "Upload ZIP and Generate Hash"
           git push
