--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: Archive ZIP
         run: |
-          zip -r assets.zip assets pack.mcmeta pack.png
+          zip -r resources.zip assets pack.mcmeta pack.png
       - name: Calculate Hash
         run: |
           sha1=($(sha1sum pack.mcmeta))
           echo $sha1 > hash.txt
       - name: Commit report
         run: |
-          git add -f assets.zip
+          git add -f resources.zip
           git add -f hash.txt
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
